@@ -84,6 +84,14 @@ allprojects {
 
     configurations {
         javacJar
+
+        // There's a bug in IntelliJ that adds the processor path to the classpath when building
+        // a Gradle project.  Because ErrorProne uses old versions of some of our jars, IntelliJ uses
+        // those jars instead of the source code. The next 3 lines exclude Checker Framework from the
+        // from the processor path as a work around for this problem.
+        annotationProcessor.exclude group:'org.checkerframework', module:'javacutil'
+        annotationProcessor.exclude group:'org.checkerframework', module:'dataflow'
+        annotationProcessor.exclude group:'org.checkerframework', module:'checker-qual'
     }
 
     dependencies {
@@ -106,7 +114,9 @@ allprojects {
             dependsOn(":framework-test:${tagletVersion}Classes")
             doFirst {
                 options.encoding = 'UTF-8'
-                options.memberLevel = javadocMemberLevel
+                if (!name.startsWith('requireJavadoc') && !name.equals("javadocDoclintAll")) {
+                    options.memberLevel = javadocMemberLevel
+                }
                 classpath += files(project(':checker').tasks.getByName('shadowJar').archivePath)
                 if (isJava8) {
                     classpath += configurations.javacJar
@@ -121,7 +131,7 @@ allprojects {
                 options.addStringOption('source', '8')
                 if (JavaVersion.current().isJava8Compatible()) {
                     options.addStringOption('Xwerror', '-quiet')
-               }
+                }
             }
         }
 
@@ -206,8 +216,9 @@ task version() {
  * @param projectName name of the project
  * @param checker full qualified name of the checker to run
  * @param shortName shorter version of the checker to use to name the task.
+ * @param args list of arguments to pass to the checker
  */
-def createCheckTypeTask(projectName, checker, shortName) {
+def createCheckTypeTask(projectName, checker, shortName, args = []) {
     project("${projectName}").tasks.create(name: "check${shortName}", type: JavaCompile, dependsOn: ':checker:shadowJar') {
         description "Run the ${shortName} Checker on the main sources."
         group 'Verification'
@@ -224,6 +235,7 @@ def createCheckTypeTask(projectName, checker, shortName) {
                 '-proc:only',
                 '-Xlint:-processing',
                 ]
+        options.compilerArgs += args
         if (isJava8) {
             options.compilerArgs += [
                 "-Xbootclasspath/p:${rootDir}/checker/dist/jdk8.jar",
@@ -258,6 +270,13 @@ List<String> getJavaFilesToFormat(projectName) {
     }
      // Collect all java files in jtreg directory
     fileTree("${project(projectName).projectDir}/jtreg").visit { details ->
+        if (!details.path.contains("nullness-javac-errors") && details.name.endsWith('java')) {
+            javaFiles.add(details.file)
+        }
+    }
+
+    // Collect all java files in jtreg directory
+    fileTree("${project(projectName).projectDir}/jtregJdk11").visit { details ->
         if (!details.path.contains("nullness-javac-errors") && details.name.endsWith('java')) {
             javaFiles.add(details.file)
         }
@@ -317,36 +336,52 @@ configurations {
 }
 dependencies {
     // https://mvnrepository.com/artifact/org.plumelib/require-javadoc
-    compileOnly group: 'org.plumelib', name: 'require-javadoc', version: '0.1.2'
+    requireJavadoc group: 'org.plumelib', name: 'require-javadoc', version: '0.1.2'
 }
-task requireJavadoc(type: Javadoc, group: "Documentation") {
-    description = 'Ensures that Java elements have Javadoc documentation.'
-    destinationDir = file("${rootDir}/docs/tmpapi")
-    source(project(':checker').sourceSets.main.allJava, project(':framework').sourceSets.main.allJava,
-            project(':dataflow').sourceSets.main.allJava, project(':javacutil').sourceSets.main.allJava)
-    classpath = files(subprojects.collect { it.sourceSets.main.compileClasspath })
 
-    destinationDir.deleteDir()
 
-    // options.memberLevel = JavadocMemberLevel.PRIVATE
-    options.docletpath = project.sourceSets.main.compileClasspath as List
-    options.doclet = "org.plumelib.javadoc.RequireJavadoc"
-    // options.addStringOption('skip', 'ClassNotToCheck|OtherClass')
+/**
+ * Creates a task named taskName that runs javadoc.
+ *
+ * @param taskName the name of the task to create
+ * @param taskDescription description of the task
+ * @param memberLevel the JavadocMemberLevel to use
+ * @param requireJavadoc whether or not to run the RequireJavadoc doclet. If false -Xdoclint:all is
+ * passed. Defaults to true.
+ * @return the new task
+ */
+def createJavadocTask(taskName, taskDescription, memberLevel, requireJavadoc = true) {
+    tasks.create(name: taskName, type: Javadoc) {
+        description = taskDescription
+        destinationDir = file("${rootDir}/docs/tmpapi")
+        destinationDir.mkdirs()
+        subprojects.forEach {
+            if(!it.name.startsWith("checker-qual")) {
+                source += it.sourceSets.main.allJava
+            }
+        }
+
+        classpath = files(subprojects.collect { it.sourceSets.main.compileClasspath })
+
+        destinationDir.deleteDir()
+        options.memberLevel = memberLevel
+        if (requireJavadoc) {
+            options.docletpath = configurations.requireJavadoc.asList()
+            options.doclet = "org.plumelib.javadoc.RequireJavadoc"
+        }
+        options.addBooleanOption('Xdoclint:all', !requireJavadoc)
+        options.addStringOption('Xmaxwarns', '99999')
+
+        // options.addStringOption('skip', 'ClassNotToCheck|OtherClass')
+    }
 }
-task requireJavadocPrivate(type: Javadoc, group: "Documentation") {
-    description = 'Ensures that all (even private) Java elements have Javadoc documentation.'
-    destinationDir = file("${rootDir}/docs/tmpapi")
-    source(project(':checker').sourceSets.main.allJava, project(':framework').sourceSets.main.allJava,
-            project(':dataflow').sourceSets.main.allJava, project(':javacutil').sourceSets.main.allJava)
-    classpath = files(subprojects.collect { it.sourceSets.main.compileClasspath })
-
-    destinationDir.deleteDir()
-
-    options.memberLevel = JavadocMemberLevel.PRIVATE
-    options.docletpath = project.sourceSets.main.compileClasspath as List
-    options.doclet = "org.plumelib.javadoc.RequireJavadoc"
-    // options.addStringOption('skip', 'ClassNotToCheck|OtherClass')
-}
+// With JDK 11 this task produces the following error:
+// javadoc: error - invalid flag: -d
+createJavadocTask('requireJavadoc', 'Ensures that protected and public Java elements have Javadoc documentation.', JavadocMemberLevel.PROTECTED)
+// With JDK 11 this task produces the following error:
+// javadoc: error - invalid flag: -d
+createJavadocTask('requireJavadocPrivate', 'Ensures that private, protected, and public Java elements have Javadoc documentation.', JavadocMemberLevel.PRIVATE)
+createJavadocTask('javadocDoclintAll', 'Runs javadoc with -Xdoclint:all option.', JavadocMemberLevel.PRIVATE, false)
 
 task downloadJtreg(type: Download) {
     description "Downloads and unpacks jtreg."
@@ -560,6 +595,8 @@ subprojects {
         // Add tasks to run various checkers on all the main source sets.
         createCheckTypeTask(project.name, 'org.checkerframework.checker.nullness.NullnessChecker', 'Nullness')
         createCheckTypeTask(project.name, 'org.checkerframework.framework.util.PurityChecker', 'Purity')
+        // TODO: fix or suppress all not.interned warnings and remove the suppression here.
+        createCheckTypeTask(project.name, 'org.checkerframework.checker.interning.InterningChecker', 'Interning', ['-AsuppressWarnings=not.interned'])
 
         // Add jtregTests to framework and checker modules
         if (project.name.is('framework') || project.name.is('checker')) {
@@ -607,6 +644,7 @@ subprojects {
                                     // uses the jdk.jdeps module.
                                     "-javacoptions:--add-modules jdk.jdeps",
                                     "-javacoptions:--add-exports=jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
                             ]
                         }
                         if (project.name.is('framework')) {
@@ -719,7 +757,7 @@ subprojects {
         // Create a nonJunitTests task per project
         tasks.create(name: 'nonJunitTests', type: GradleBuild, group: 'Verification') {
             description 'Run all Checker Framework tests except for the Junit tests.'
-            tasks = ['checkPurity']
+            tasks = ['checkPurity', 'checkInterning']
             if (project.name.is('framework') || project.name.is('checker')) {
                 tasks += ['checkCompilerMessages', 'jtregTests']
             }
@@ -728,6 +766,9 @@ subprojects {
             }
 
             if (project.name.is('checker')) {
+                if (!isJava8) {
+                    tasks += ['jtregJdk11Tests']
+                }
                 tasks += ['nullnessExtraTests', 'commandLineTests', 'tutorialTests']
             }
         }
